--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@astrojs/mdx": "^4.0.7",
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.2.1",
-    "astro": "^5.1.8"
+    "astro": "^5.1.8",
+    "astro-bootstrap": "^0.7.0",
+    "preferred-pm": "^4.0.0"
   }
 }
