--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "@astrojs/mdx": "^4.0.7",
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.2.1",
+    "@astrojs/vercel": "^8.0.4",
+    "@tailwindcss/vite": "^4.0.0",
     "astro": "^5.1.8",
     "astro-bootstrap": "^0.7.0",
     "bootstrap": "^5.3.3",
     "preferred-pm": "^4.0.0",
+    "tailwindcss": "^4.0.0",
     "typescript": "^4.9.4"
   }
 }
